<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/imagen2"
        android:id="@+id/imvFoto"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="11dp" />

    <TextView
        android:text="@string/txvSeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imvFoto"
        android:layout_toRightOf="@+id/imvFoto"
        android:layout_toEndOf="@+id/imvFoto"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:id="@+id/txvSeeName" />

    <TextView
        android:text="@string/txvSeePrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txvSeePrice"
        android:layout_below="@+id/txvSeeName"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toRightOf="@+id/imvFoto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="@string/txvSeeStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txvSeeStock"
        android:layout_below="@+id/txvSeePrice"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toRightOf="@+id/imvFoto"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp" />

</RelativeLayout>