<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jasrsir.manageproducts.LoginMain_Activity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilUser"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error"
        tools:textSize="24sp"
        app:hintTextAppearance="@style/hint">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edtUser"
            android:hint="@string/messageUser"
            tools:textSize="24sp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilPass"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tilUser"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:counterMaxLength="20"
        app:errorTextAppearance="@style/error"
        app:hintTextAppearance="@style/hint"
        tools:textSize="24sp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edtPassword"
            android:hint="@string/messagePass"
            tools:textSize="24sp"/>
    </android.support.design.widget.TextInputLayout>


    <CheckBox
        android:text="@string/ckbRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tilPass"
        android:id="@+id/ckbRemember"
        android:layout_marginTop="@dimen/widget_margin_top"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:textSize="24sp"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/widget_margin_top"
        android:layout_below="@+id/ckbRemember"
        android:layout_centerHorizontal="true">

        <Button
            android:text="@string/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_centerHorizontal="true"
            tools:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>
